[package]
name = "github-hook-receiver"
version = "0.2.2"
authors = [ "Dennis Schubert <mail@dennis-schubert.de>" ]

[dependencies]
env_logger = "*"
hyper = "*"
iron = "*"
log = "*"
router = "*"
rust-crypto = "*"
rustc-serialize = "*"

[dependencies.persistent]
git = "https://github.com/iron/persistent.git"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
